fix boardcore timestretch

--- a/docs/themes/zeptocore/assets/css/main.css
+++ b/docs/themes/zeptocore/assets/css/main.css
@@ -627,3 +627,15 @@ pre {
   text-decoration: none;
   cursor: pointer;
 }
+
+.modal-info {
+  max-width: 800px;
+  padding-left: 50px;
+  display: block;
+  white-space: nowrap;
+}
+
+
+.modal-info>[id]::before {
+  display: inherit;
+}
